--- a/plugins/lgdis/app/views/evacuation_advisories/_form.html.erb
+++ b/plugins/lgdis/app/views/evacuation_advisories/_form.html.erb
@@ -1,10 +1,24 @@
 <%= error_messages_for 'evacuation_advisory' %>
-<div class="nonsplitcontent">
-</div>
-
+<div class="nonsplitcontent"> </div>
 <div class="splitcontent">
 <%#COMMONS-applicable fields below%>
   <div class="splitcontentleft">
+
+    <%= field_for :area, :required => true do |key, label| %>
+      <%= label_tag{label} %>
+      <%= f.text_field key,:size=>'50',:disabled => @disabled %>
+    <% end %>
+
+    <%= field_for :area_kana, :required => true do |key, label| %>
+      <%= label_tag{label} %>
+      <%= f.text_field key,:size=>'50',:disabled => @disabled %>
+    <% end %>
+
+    <%= field_for :district do |key, label| %>
+      <%= label_tag{label} %>
+      <%= f.select key, options_for_select(@evacuation_advisory_const[key.to_s].invert, f.object.send(key)),{:include_blank => true},:disabled => @disabled %>
+    <% end %>
+
 
     <%= field_for :sort_criteria, :required => true do |key, label| %>
       <%= label_tag{label} %>
@@ -16,29 +30,26 @@
       <%= f.select key, options_for_select(@evacuation_advisory_const[key.to_s].invert, f.object.send(key)),{:include_blank => true},:disabled => @disabled %>
     <% end %>
 
-    <%= field_for :area, :required => true do |key, label| %>
-      <%= label_tag{label} %>
-      <%= f.text_field key,:size=>'50',:disabled => @disabled %>
-    <% end %>
-
-    <%= field_for :issued_at do |key, label| %>
-      <%= label_tag{label} %>
-      <%= f.text_field :issued_at,:size=>'10',:disabled => @disabled %><%= calendar_for("#{f.object_name}_issued_at") unless @disabled %>
-<%#      <%= f.text_field :issued_hm,:size=>'5',:disabled => @disabled +|%>
-    <% end %>
   </div>
 
   <div class="splitcontentright">
-    <%= field_for :changed_at do |key, label| %>
+    <%= field_for :issued_at do |key, label| %>
       <%= label_tag{label} %>
-      <%= f.text_field :changed_at,:size=>'10',:disabled => @disabled %><%= calendar_for("#{f.object_name}_changed_at") unless @disabled %>
-<%#      <%= f.text_field :changed_hm,:size=>'5',:disabled => @disabled +|%>
+      <%= f.text_field :issued_date,:size=>'10',:disabled => @disabled %><%= calendar_for("#{f.object_name}_issued_date") unless @disabled %>
+      <%= f.text_field :issued_hm,:size=>'5',:disabled => @disabled %>
     <% end %>
+
+<%#移行日時は非表示になりました%>
+<%#    <%= field_for :changed_at do |key, label| +|%>
+<%#      <%= label_tag{label} +|%>
+<%#      <%= f.text_field :changed_date,:size=>'10',:disabled => @disabled +|<%= calendar_for("#{f.object_name}_changed_date") unless @disabled +|%>
+<%#      <%= f.text_field :changed_hm,:size=>'5',:disabled => @disabled +|%>
+<%#    <% end +|%>
     
     <%= field_for :lifted_at do |key, label| %>
       <%= label_tag{label} %>
-      <%= f.text_field :lifted_at,:size=>'10',:disabled => @disabled %><%= calendar_for("#{f.object_name}_lifted_at") unless @disabled %>
-<%#      <%= f.text_field :lifted_hm,:size=>'5',:disabled => @disabled +|%>
+      <%= f.text_field :lifted_date,:size=>'10',:disabled => @disabled %><%= calendar_for("#{f.object_name}_lifted_date") unless @disabled %>
+      <%= f.text_field :lifted_hm,:size=>'5',:disabled => @disabled %>
     <% end %>
 
     <%= field_for :households do |key, label| %>
@@ -63,15 +74,15 @@
       <%= f.select key, options_for_select(@evacuation_advisory_const[key.to_s].invert, f.object.send(key)),{:include_blank => true},:disabled => @disabled %>
     <% end %>
 
-    <%= field_for :identifier, :required => true do |key, label| %>
-      <%= label_tag{label} %>
-      <%= f.text_field key,:size=>'70',:disabled => @disabled %>
-    <% end %>
+<%#    識別情報は非表示になりました%>
+<%#    <%= field_for :identifier, :required => true do |key, label| +|%>
+<%#      <%= label_tag{label} +|%>
+<%#      <%= f.text_field key,:size=>'70',:disabled => @disabled +|%>
+<%#    <% end +|%>
 
     <%= field_for :category do |key, label| %>
       <%= label_tag{label} %>
       <%= f.select key, options_for_select(@evacuation_advisory_const[key.to_s].invert, f.object.send(key)),{:include_blank => true},:disabled => @disabled %>
-<%#      <%= f.text_field key,:size=>'70',:disabled => @disabled +|%>
     <% end %>
 
     <%= field_for :cause do |key, label| %>
@@ -92,14 +103,15 @@
       <%= label_tag{label} %>
       <%= f.text_field key,:size=>'70',:disabled => @disabled %>
     <% end %>
-  </div>
 
-  <div class="splitcontentright">
     <%= field_for :emergency_hq_needed_city do |key, label| %>
       <%= label_tag{label} %>
       <%= f.text_field key,:size=>'70',:disabled => @disabled %>
     <% end %>
 
+  </div>
+
+  <div class="splitcontentright">
     <%= field_for :alert do |key, label| %>
       <%= label_tag{label} %>
       <%= f.text_field key,:size=>'70',:disabled => @disabled %>
@@ -136,6 +148,7 @@
     <% end %>
   </div>
 </div>
+<p/>
   <div class="split3contentleft">
     <%= field_for :staff_no do |key, label| %>
       <%= label_tag{label} %>
