(1) 不要ファイル削除 (2)鈴木氏の連絡をうけ､ 避難勧告･指示種別を任意登録項目にした｡

--- a/plugins/lgdis/app/views/evacuation_advisories/_form.html.erb
+++ b/plugins/lgdis/app/views/evacuation_advisories/_form.html.erb
@@ -69,7 +69,7 @@
 <div class="splitcontent">
 <%#APPLIC-applicable fields below%>
   <div class="splitcontentleft">
-    <%= field_for :advisory_type, :required => true do |key, label| %>
+    <%= field_for :advisory_type do |key, label| %>
       <%= label_tag{label} %>
       <%= f.select key, options_for_select(@evacuation_advisory_const[key.to_s].invert, f.object.send(key)),{:include_blank => true},:disabled => @disabled %>
     <% end %>
