--- a/plugins/lgdis/app/views/evacuation_advisories/_form.html.erb
+++ b/plugins/lgdis/app/views/evacuation_advisories/_form.html.erb
@@ -9,7 +9,7 @@
       <%= f.text_field key,:size=>'50',:disabled => @disabled %>
     <% end %>
 
-    <%= field_for :area_kana, :required => true do |key, label| %>
+    <%= field_for :area_kana do |key, label| %>
       <%= label_tag{label} %>
       <%= f.text_field key,:size=>'50',:disabled => @disabled %>
     <% end %>
