--- a/plugins/lgdis/app/views/evacuation_advisories/_search_conditions.html.erb
+++ b/plugins/lgdis/app/views/evacuation_advisories/_search_conditions.html.erb
@@ -1,7 +1,7 @@
 <%= f.hidden_field :project_id_eq, :value => project.id %>
 <div class="splitcontent">
   <div class="splitcontentleft">
-<%#    避難勧告･指示種別は非表示化になりました%>
+<%#    避難勧告･指示種別は非表示になりました%>
 <%#    <%= field_for :advisory_type do |key, label| +|%>
 <%#      <%= label_tag{label} +|%>
 <%#      <%= f.select("#{key}_eq", options_for_select(@evacuation_advisory_const[key.to_s].invert, @search.advisory_type_eq),:include_blank => true) +|%>
@@ -26,22 +26,22 @@
     
     <%= field_for :area do |key, label| %>
       <%= label_tag{label} %>
-      <%= f.text_field "#{key}_eq", :value => @search.issued_at_gte.to_s, :size=>'50' %>
+      <%= f.text_field "#{key}_like", :value => @search.area_like, :size=>'50' %>
     <% end %>
     
     <%= field_for :issued_at do |key, label| %>
       <%= label_tag{label} %>
-      <%= f.text_field "#{key}_gte", :value => @search.issued_at_gte.to_s, :size=>'10' %> <%= calendar_for("search_#{key}_gte") %>
+      <%= f.text_field "#{key}_gte", :value => @search.issued_at_gte, :size=>'10' %> <%= calendar_for("search_#{key}_gte") %>
       ～
-      <%= f.text_field "#{key}_lte", :value => @search.issued_at_lte.to_s, :size=>'10' %> <%= calendar_for("search_#{key}_lte") %>
+      <%= f.text_field "#{key}_lte", :value => @search.issued_at_lte, :size=>'10' %> <%= calendar_for("search_#{key}_lte") %>
     <% end %>
 
 <%#    移行日時は非表示になりました%>
 <%#    <%= field_for :changed_at do |key, label| +|%>
 <%#      <%= label_tag{label} +|%>
-<%#      <%= f.text_field "#{key}_gte", :value => @search.changed_at_gte.to_s, :size=>'10' +| <%= calendar_for("search_#{key}_gte") +|%>
-      ～
-<%#      <%= f.text_field "#{key}_lte", :value => @search.changed_at_lte.to_s, :size=>'10' +| <%= calendar_for("search_#{key}_lte") +|%>
+<%#      <%= f.text_field "#{key}_gte", :value => @search.changed_at_gte, :size=>'10' +| <%= calendar_for("search_#{key}_gte") +|%>
+<%#      ～%>
+<%#      <%= f.text_field "#{key}_lte", :value => @search.changed_at_lte, :size=>'10' +| <%= calendar_for("search_#{key}_lte") +|%>
 <%#    <% end +|%>
 
     <%= field_for :lifted_at do |key, label| %>
@@ -70,7 +70,7 @@
 <div class="nonsplitcontent">
   <%= field_for :remarks do |key, label| %>
     <%= label_tag{label} %>
-    <%= f.text_field "#{key}_like", :value => @search.remarks_like, :size=>'50' %>
+		<%= f.text_field "#{key}_like", :value => @search.remarks_like, :size=>'50' %>
   <% end %>
 </div>
 
