避難勧告・指示の[発令・解除地区名称]、避難所の[避難所名]をユニーク制約追加。避難勧告・指示の不要な行等を削除し、一部バグを修正

--- a/plugins/lgdis/app/views/evacuation_advisories/index.html.erb
+++ b/plugins/lgdis/app/views/evacuation_advisories/index.html.erb
@@ -34,10 +34,6 @@
         <% if authorize_for(:evacuation_advisories, :ticket) # 権限判定 %>
          <%= submit_tag l(:button_ticket), :kind => "ticket" %>
         <% end %>
-<%#        集計ボタンは非表示になりました%>
-<%#        <% if authorize_for(:evacuation_advisories, :summary) # 権限判定 +|%>
-<%#          <%= submit_tag l(:button_summary), :kind => "summary" +|%>
-<%#        <% end +|%>
       </p>
       <p style="text-align: right;">
         <%= will_paginate @evacuation_advisories, :previous_label => "前 &lt;&lt; ",
@@ -60,7 +56,7 @@
     });
   });
   
-  // 避難所一覧行リンククリック処理
+  // 避難勧告・指示一覧行リンククリック処理
   $(function($) {
     $('tr[data-href]').addClass('clickable').click(function(e) {
       if (!$(e.target).is('a')) {
