避難勧告・指示で、地区（大分類）のコード名称マスタを、constantsテーブルからキャッシュに変更

--- a/plugins/lgdis/app/views/evacuation_advisories/_search_conditions.html.erb
+++ b/plugins/lgdis/app/views/evacuation_advisories/_search_conditions.html.erb
@@ -11,7 +11,7 @@
   
   <%= field_for :district  do |key, label| %>
     <%= label_tag{label} %>
-    <%= f.select("#{key}_eq", options_for_select(@evacuation_advisory_const[key.to_s].invert, @search.district_eq),:include_blank => true) %>
+    <%= f.select("#{key}_eq", options_for_select(@area.invert, @search.district_eq),:include_blank => true) %>
   <% end %>
   
   <%= field_for :area do |key, label| %>
