--- a/plugins/lgdis/app/views/evacuation_advisories/_form.html.erb
+++ b/plugins/lgdis/app/views/evacuation_advisories/_form.html.erb
@@ -21,7 +21,7 @@
       <%= f.select key, options_for_select(@evacuation_advisory_const[key.to_s].invert, f.object.send(key)),{:include_blank => true},:disabled => @disabled %>
     <% end %>
     
-    <%= field_for :issue_or_lift do |key, label| %>
+    <%= field_for :issueorlift do |key, label| %>
       <%= label_tag{label} %>
       <%= f.select key, options_for_select(@evacuation_advisory_const[key.to_s].invert, f.object.send(key)),{:include_blank => true},:disabled => @disabled %>
     <% end %>
