--- a/plugins/lgdis/app/views/evacuation_advisories/_form.html.erb
+++ b/plugins/lgdis/app/views/evacuation_advisories/_form.html.erb
@@ -13,7 +13,7 @@
     
     <%= field_for :district do |key, label| %>
       <%= label_tag{label} %>
-      <%= f.select key, options_for_select(@area.invert, f.object.send(key)),{:include_blank => true},:disabled => @disabled %>
+      <%= f.select key, options_for_select(@areas.map{|v| [v.name,v.area_code]}, f.object.send(key)),{:include_blank => true},:disabled => @disabled %>
     <% end %>
     
     <%= field_for :sort_criteria, :required => true do |key, label| %>
