--- a/plugins/lgdis/app/views/evacuation_advisories/_form.html.erb
+++ b/plugins/lgdis/app/views/evacuation_advisories/_form.html.erb
@@ -25,6 +25,11 @@
       <%= label_tag{label} %>
       <%= f.select key, options_for_select(@evacuation_advisory_const[key.to_s].invert, f.object.send(key)),{:include_blank => true},:disabled => @disabled %>
     <% end %>
+    
+    <%= field_for :advisory_type do |key, label| %>
+      <%= label_tag{label} %>
+      <%= f.select key, options_for_select(@evacuation_advisory_const[key.to_s].invert, f.object.send(key)),{:include_blank => true},:disabled => @disabled %>
+    <% end %>
   </div>
 
   <div class="splitcontentright">
@@ -49,112 +54,117 @@
       <%= label_tag{label} %>
       <%= f.text_field key,:size=>'70',:disabled => @disabled %>
     <% end %>
-  </div>
-</div>
-
-<hr>
-
-<div class="splitcontent">
-  <div class="splitcontentleft">
-    <%= field_for :advisory_type do |key, label| %>
-      <%= label_tag{label} %>
-      <%= f.select key, options_for_select(@evacuation_advisory_const[key.to_s].invert, f.object.send(key)),{:include_blank => true},:disabled => @disabled %>
-    <% end %>
     
     <%= field_for :category do |key, label| %>
       <%= label_tag{label} %>
       <%= f.select key, options_for_select(@evacuation_advisory_const[key.to_s].invert, f.object.send(key)),{:include_blank => true},:disabled => @disabled %>
     <% end %>
-    
-    <%= field_for :cause do |key, label| %>
-      <%= label_tag{label} %>
-      <%= f.text_field key,:size=>'70',:disabled => @disabled %>
-    <% end %>
-    
-    <%= field_for :headline do |key, label| %>
-      <%= label_tag{label} %>
-      <%= f.text_field key,:size=>'70',:disabled => @disabled %>
-    <% end %>
-    
-    <%= field_for :message do |key, label| %>
-      <%= label_tag{label} %>
-      <%= f.text_field key,:size=>'70',:disabled => @disabled %>
-    <% end %>
-    
-    <%= field_for :emergency_hq_needed_prefecture do |key, label| %>
-      <%= label_tag{label} %>
-      <%= f.text_field key,:size=>'70',:disabled => @disabled %>
-    <% end %>
-    
-    <%= field_for :emergency_hq_needed_city do |key, label| %>
-      <%= label_tag{label} %>
-      <%= f.text_field key,:size=>'70',:disabled => @disabled %>
-    <% end %>
-  </div>
-
-  <div class="splitcontentright">
-    <%= field_for :alert do |key, label| %>
-      <%= label_tag{label} %>
-      <%= f.text_field key,:size=>'70',:disabled => @disabled %>
-    <% end %>
-
-    <%= field_for :alerting_area do |key, label| %>
-      <%= label_tag{label} %>
-      <%= f.text_field key,:size=>'70',:disabled => @disabled %>
-    <% end %>
-
-    <%= field_for :siren_area do |key, label| %>
-      <%= label_tag{label} %>
-      <%= f.text_field key,:size=>'70',:disabled => @disabled %>
-    <% end %>
-
-    <%= field_for :evacuation_order do |key, label| %>
-      <%= label_tag{label} %>
-      <%= f.text_field key,:size=>'70',:disabled => @disabled %>
-    <% end %>
-
-    <%= field_for :evacuate_from do |key, label| %>
-      <%= label_tag{label} %>
-      <%= f.text_field key,:size=>'70',:disabled => @disabled %>
-    <% end %>
-
-    <%= field_for :evacuate_to do |key, label| %>
-      <%= label_tag{label} %>
-      <%= f.text_field key,:size=>'70',:disabled => @disabled %>
-    <% end %>
-
-    <%= field_for :evacuation_steps_by_authorities do |key, label| %>
-      <%= label_tag{label} %>
-      <%= f.text_field key,:size=>'70',:disabled => @disabled %>
-    <% end %>
   </div>
 </div>
-<p/>
-  <div class="split3contentleft">
-    <%= field_for :staff_no do |key, label| %>
-      <%= label_tag{label} %>
-      <%= f.text_field key,:size=>'10',:disabled => @disabled %>
-    <% end %>
-  </div>
-  <div class="split3contentcenter">
-    <%= field_for :full_name do |key, label| %>
-      <%= label_tag{label} %>
-      <%= f.text_field key,:size=>'30',:disabled => @disabled %>
-    <% end %>
-  </div>
-  <div class="split3contentright">
-    <%= field_for :alias do |key, label| %>
-      <%= label_tag{label} %>
-      <%= f.text_field key,:size=>'30',:disabled => @disabled %>
-    <% end %>
-  </div>
 
-
-<div class="nonsplitcontent">
-  <%= field_for :remarks do |key, label| %>
-    <%= label_tag{label} %>
-    <%= f.text_area key,:size=>'70x4',:disabled => @disabled %>
-  <% end %>
-</div>
+<fieldset class="collapsible normal_font no_padding">
+  <legend id="evacuation_advisories_detail" onclick="toggleFieldset(this);">
+    <%= l(:label_detail) %>
+  </legend>
+  <div class="splitcontent">
+    <div class="splitcontentleft">
+      <%= field_for :alert do |key, label| %>
+        <%= label_tag{label} %>
+        <%= f.text_field key,:size=>'70',:disabled => @disabled %>
+      <% end %>
+  
+      <%= field_for :cause do |key, label| %>
+        <%= label_tag{label} %>
+        <%= f.text_field key,:size=>'70',:disabled => @disabled %>
+      <% end %>
+      
+      <%= field_for :headline do |key, label| %>
+        <%= label_tag{label} %>
+        <%= f.text_field key,:size=>'70',:disabled => @disabled %>
+      <% end %>
+      
+      <%= field_for :message do |key, label| %>
+        <%= label_tag{label} %>
+        <%= f.text_field key,:size=>'70',:disabled => @disabled %>
+      <% end %>
+      
+      <%= field_for :emergency_hq_needed_prefecture do |key, label| %>
+        <%= label_tag{label} %>
+        <%= f.text_field key,:size=>'70',:disabled => @disabled %>
+      <% end %>
+      
+      <%= field_for :emergency_hq_needed_city do |key, label| %>
+        <%= label_tag{label} %>
+        <%= f.text_field key,:size=>'70',:disabled => @disabled %>
+      <% end %>
+    </div>
+  
+    <div class="splitcontentright">
+      <%= field_for :alerting_area do |key, label| %>
+        <%= label_tag{label} %>
+        <%= f.text_field key,:size=>'70',:disabled => @disabled %>
+      <% end %>
+  
+      <%= field_for :siren_area do |key, label| %>
+        <%= label_tag{label} %>
+        <%= f.text_field key,:size=>'70',:disabled => @disabled %>
+      <% end %>
+  
+      <%= field_for :evacuation_order do |key, label| %>
+        <%= label_tag{label} %>
+        <%= f.text_field key,:size=>'70',:disabled => @disabled %>
+      <% end %>
+  
+      <%= field_for :evacuate_from do |key, label| %>
+        <%= label_tag{label} %>
+        <%= f.text_field key,:size=>'70',:disabled => @disabled %>
+      <% end %>
+  
+      <%= field_for :evacuate_to do |key, label| %>
+        <%= label_tag{label} %>
+        <%= f.text_field key,:size=>'70',:disabled => @disabled %>
+      <% end %>
+  
+      <%= field_for :evacuation_steps_by_authorities do |key, label| %>
+        <%= label_tag{label} %>
+        <%= f.text_field key,:size=>'70',:disabled => @disabled %>
+      <% end %>
+    </div>
+  </div>
+  <p/>
+    <div class="split3contentleft">
+      <%= field_for :staff_no do |key, label| %>
+        <%= label_tag{label} %>
+        <%= f.text_field key,:size=>'10',:disabled => @disabled %>
+      <% end %>
+    </div>
+    <div class="split3contentcenter">
+      <%= field_for :full_name do |key, label| %>
+        <%= label_tag{label} %>
+        <%= f.text_field key,:size=>'30',:disabled => @disabled %>
+      <% end %>
+    </div>
+    <div class="split3contentright">
+      <%= field_for :alias do |key, label| %>
+        <%= label_tag{label} %>
+        <%= f.text_field key,:size=>'30',:disabled => @disabled %>
+      <% end %>
+    </div>
+  
+  
+  <div class="nonsplitcontent">
+    <%= field_for :remarks do |key, label| %>
+      <%= label_tag{label} %>
+      <%= f.text_area key,:size=>'70x4',:disabled => @disabled %>
+    <% end %>
+  </div>
+</fieldset>
   
 <% include_calendar_headers_tags %>
+
+<%= javascript_tag do %>
+  $(document).ready(function() {
+    // 詳細を初期表示時に非表示にする
+    $("#evacuation_advisories_detail").click();
+  });
+<% end %>
