Revert "更新ボタン削除"
This reverts commit 5f46e507e9d0e4f7c270296f68b9c45db3264b82.

--- a/plugins/lgdis/app/views/evacuation_advisories/_list.html.erb
+++ b/plugins/lgdis/app/views/evacuation_advisories/_list.html.erb
@@ -23,16 +23,20 @@
           </a>
         </td>
         <td style="text-align: center;">
-          <%= @evacuation_advisory_const["sort_criteria"][evacuation_advisory.sort_criteria] %>
+          <%= select_tag "evacuation_advisories[#{evacuation_advisory.id}][sort_criteria]", options_for_select(@evacuation_advisory_const["sort_criteria"].invert, evacuation_advisory.sort_criteria), {:include_blank => true, :disabled => @disabled} %>
         </td>
         <td style="text-align: center;">
-          <%= @evacuation_advisory_const["issueorlift"][evacuation_advisory.issueorlift] %>
+          <%= select_tag "evacuation_advisories[#{evacuation_advisory.id}][issueorlift]", options_for_select(@evacuation_advisory_const["issueorlift"].invert, evacuation_advisory.issueorlift), {:include_blank => true, :disabled => @disabled} %>
         </td>
         <td style="text-align: center;" nowrap>
-          <%= format_time(evacuation_advisory.issued_at) %>
+          <%= text_field_tag "evacuation_advisories[#{evacuation_advisory.id}][issued_date]", evacuation_advisory.issued_date, :size => "10", :disabled => @disabled %>
+          <%= calendar_for("evacuation_advisories_#{evacuation_advisory.id}_issued_date") %>
+          <%= text_field_tag "evacuation_advisories[#{evacuation_advisory.id}][issued_hm]", evacuation_advisory.issued_hm, :size => "5", :disabled => @disabled %>
         </td>
         <td style="text-align: center;" nowrap>
-          <%= format_time(evacuation_advisory.lifted_at) %>
+          <%= text_field_tag "evacuation_advisories[#{evacuation_advisory.id}][lifted_date]", evacuation_advisory.lifted_date, :size => "10", :disabled => @disabled %>
+          <%= calendar_for("evacuation_advisories_#{evacuation_advisory.id}_lifted_date") %>
+          <%= text_field_tag "evacuation_advisories[#{evacuation_advisory.id}][lifted_hm]", evacuation_advisory.lifted_hm, :size => "5", :disabled => @disabled %>
         </td>
         <td style="text-align: center;"><%= evacuation_advisory.households %></td>
         <td style="text-align: center;"><%= evacuation_advisory.head_count%></td>
