--- a/plugins/lgdis/app/views/evacuation_advisories/_form.html.erb
+++ b/plugins/lgdis/app/views/evacuation_advisories/_form.html.erb
@@ -35,14 +35,12 @@
   <div class="splitcontentright">
     <%= field_for :issued_at do |key, label| %>
       <%= label_tag{label} %>
-      <%= f.text_field :issued_date,:size=>'10',:disabled => @disabled %><%= calendar_for("#{f.object_name}_issued_date") unless @disabled %>
-      <%= f.text_field :issued_hm,:size=>'5',:disabled => @disabled %>
+      <%= f.text_field key,:value=>format_time_for_input(f.object,key),:size=>'16',:disabled => @disabled %><%= calendar_with_time_for("#{f.object_name}_#{key}") unless @disabled %>
     <% end %>
     
     <%= field_for :lifted_at do |key, label| %>
       <%= label_tag{label} %>
-      <%= f.text_field :lifted_date,:size=>'10',:disabled => @disabled %><%= calendar_for("#{f.object_name}_lifted_date") unless @disabled %>
-      <%= f.text_field :lifted_hm,:size=>'5',:disabled => @disabled %>
+      <%= f.text_field key,:value=>format_time_for_input(f.object,key),:size=>'16',:disabled => @disabled %><%= calendar_with_time_for("#{f.object_name}_#{key}") unless @disabled %>
     <% end %>
 
     <%= field_for :section do |key, label| %>
