--- a/plugins/lgdis/app/views/evacuation_advisories/_list.html.erb
+++ b/plugins/lgdis/app/views/evacuation_advisories/_list.html.erb
@@ -2,7 +2,7 @@
   <thead>
     <tr>
       <th style="text-align: center;">発令・解除地区名称（大域）</th>
-      <th style="text-align: center;">発令・解除地区名称（中域）</th>
+<!--       <th style="text-align: center;">発令・解除地区名称（中域）</th> -->
       <th style="text-align: center;">発令・解除地区名称</th>
       <th style="text-align: center;">発令区分</th>
       <th style="text-align: center;">発令・解除区分</th>
@@ -18,9 +18,9 @@
         <td style="text-align: center;">
           <%= @areas.select{|v| v.area_code == evacuation_advisory.district}.first.try(:name) %>
         </td>
-        <td style="text-align: center;">
-          <%= @sections.select{|v| v.section_code == evacuation_advisory.section}.first.try(:name) %>
-        </td>
+<!--         <td style="text-align: center;"> -->
+<!--           <%= @sections.select{|v| v.section_code == evacuation_advisory.section}.first.try(:name) %> -->
+<!--         </td> -->
         <td style="text-align: center;">
           <a href=<%= edit_project_evacuation_advisory_path(@project, evacuation_advisory) %> >
             <%= evacuation_advisory.area %>
