--- a/plugins/lgdis/app/views/evacuation_advisories/_form.html.erb
+++ b/plugins/lgdis/app/views/evacuation_advisories/_form.html.erb
@@ -11,6 +11,16 @@
       <%= f.text_field key,:size=>'50',:disabled => @disabled %>
     <% end %>
     
+    <%= field_for :category do |key, label| %>
+      <%= label_tag{label} %>
+      <%= f.select key, options_for_select(@evacuation_advisory_const[key.to_s].invert, f.object.send(key)),{:include_blank => true},:disabled => @disabled %>
+    <% end %>
+    
+    <%= field_for :disaster_overview do |key, label| %>
+      <%= label_tag{label} %>
+      <%= f.text_field key,:size=>'50',:disabled => @disabled %>
+    <% end %>
+    
     <%= field_for :district do |key, label| %>
       <%= label_tag{label} %>
       <%= f.select key, options_for_select(@areas.map{|v| [v.name,v.area_code]}, f.object.send(key)),{:include_blank => true},:disabled => @disabled %>
@@ -26,10 +36,10 @@
       <%= f.select key, options_for_select(@evacuation_advisory_const[key.to_s].invert, f.object.send(key)),{:include_blank => true},:disabled => @disabled %>
     <% end %>
     
-    <%= field_for :advisory_type do |key, label| %>
-      <%= label_tag{label} %>
-      <%= f.select key, options_for_select(@evacuation_advisory_const[key.to_s].invert, f.object.send(key)),{:include_blank => true},:disabled => @disabled %>
-    <% end %>
+<!--     <%= field_for :advisory_type do |key, label| %> -->
+<!--       <%= label_tag{label} %> -->
+<!--       <%= f.select key, options_for_select(@evacuation_advisory_const[key.to_s].invert, f.object.send(key)),{:include_blank => true},:disabled => @disabled %> -->
+<!--     <% end %> -->
   </div>
 
   <div class="splitcontentright">
@@ -56,11 +66,6 @@
     <%= field_for :head_count do |key, label| %>
       <%= label_tag{label} %>
       <%= f.text_field key,:size=>'70',:disabled => @disabled %>
-    <% end %>
-    
-    <%= field_for :category do |key, label| %>
-      <%= label_tag{label} %>
-      <%= f.select key, options_for_select(@evacuation_advisory_const[key.to_s].invert, f.object.send(key)),{:include_blank => true},:disabled => @disabled %>
     <% end %>
   </div>
 </div>
