避難勧告・発令の区分をシステムで管理する
* 避難勧告・発令情報で区分に応じた必須項目(発令日時など)が未入力の場合、作成されたチケット(説明部)に正しく表示されない不具合を修正
* 避難勧告・発令情報で区分に応じた必須項目(発令日時など)が未入力の場合、チケット登録時にエラーメッセージが表示されなくなっていたため修正

--- a/plugins/lgdis/app/views/evacuation_advisories/index.html.erb
+++ b/plugins/lgdis/app/views/evacuation_advisories/index.html.erb
@@ -2,7 +2,7 @@
 
 <h2><%= l(:label_evacuation_advisory_plural) %></h2>
 
-<%= error_messages_for_evacuation_advisories(@evacuation_advisories) %>
+<%= error_messages_for_evacuation_advisories(@evacuation_advisories, @evacuation_advisories_for_ticket) %>
 
 <%= form_for @search, :url => project_evacuation_advisories_search_path, :html => {:method => :post} do |f| %>
   <%= hidden_field_tag "commit_kind" %>
