--- a/plugins/lgdis/app/views/evacuation_advisories/_list.html.erb
+++ b/plugins/lgdis/app/views/evacuation_advisories/_list.html.erb
@@ -2,12 +2,12 @@
   <thead>
     <tr>
 <!--       <th style="text-align: center;">発令・解除地区名称（中域）</th> -->
-      <th style="text-align: center;"><%= sort_link @search, :area,                  "発令・解除地区名称", {page: params[:page]}%></th>
-      <th style="text-align: center;"><%= sort_link @search, :current_sort_criteria, "発令区分", {page: params[:page]}%></th>
-      <th style="text-align: center;"><%= sort_link @search, :issued_at,             "発令日時", {page: params[:page]}%></th>
-      <th style="text-align: center;"><%= sort_link @search, :lifted_at,             "解除日時", {page: params[:page]}%></th>
-      <th style="text-align: center;"><%= sort_link @search, :households,            "対象世帯数", {page: params[:page]}%></th>
-      <th style="text-align: center;"><%= sort_link @search, :head_count,            "対象人数", {page: params[:page]}%></th>
+      <th style="text-align: center;"><%= sort_link @search, :area,                  l("evacuation_advisories.field_area"), {page: params[:page]}%></th>
+      <th style="text-align: center;"><%= sort_link @search, :current_sort_criteria, l("evacuation_advisories.field_sort_criteria"), {page: params[:page]}%></th>
+      <th style="text-align: center;"><%= sort_link @search, :issued_at,             l("evacuation_advisories.field_issued_at"), {page: params[:page]}%></th>
+      <th style="text-align: center;"><%= sort_link @search, :lifted_at,             l("evacuation_advisories.field_lifted_at"), {page: params[:page]}%></th>
+      <th style="text-align: center;"><%= sort_link @search, :households,            l("evacuation_advisories.field_households"), {page: params[:page]}%></th>
+      <th style="text-align: center;"><%= sort_link @search, :head_count,            l("evacuation_advisories.field_head_count"), {page: params[:page]}%></th>
     </tr>
   </thead>
   <tbody>
